--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/samples": "2.1.1",
     "apisauce": "1.0.2",
     "expo": "^31.0.2",
+    "moment": "2.24.0",
     "native-base": "2.12.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
